--- a/css/main.css
+++ b/css/main.css
@@ -86,3 +86,4 @@ div .block{
 .btn.blue {    background-color: rgb(41, 129, 228);}
 .btn.green {    background-color: #6ABF4D;}
 
+a{margin-right:0 5px;}
